[workspace]
members = [
    "crates/lerp-relay",
    "crates/lerp-daemon",
    "crates/lerp-proto",
]

[workspace.dependencies]
lerp-proto = { path = "crates/lerp-proto" }

# tracing / logging / error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0.18"

# encoding
rmp = "0.8.15"
blake3 = "1.8.3"
rmp-serde = "1.3.1"
rmpv = { version = "1.3.0", features = ["with-serde"] }
serde_bytes = "0.11.19"
serde = { version = "1.0", features = ["derive"] }
data-encoding = "2.6"
base64 = "0.22"

# crypto
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.8"

# dotenv
dotenvy = "0.15"
dashmap = "6"

# config / serialization extras
toml = "0.8"
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# E2E encryption
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"

# system dirs
dirs = "5"

# async runtime
tokio = { version = "1.0", features = ["full"] }
wtransport = { version = "0.7" }

[workspace.lints]
