[package]
name = "lerp-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
# protocol
lerp-proto = { workspace = true }

# tracing / logging / error handling
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }

# serialization
rmp = { workspace = true }
rmp-serde = { workspace = true }
rmpv = { workspace = true }
serde_bytes = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# config
toml = { workspace = true }

# CLI
clap = { workspace = true }

# E2E encryption
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }

# system
dirs = { workspace = true }
blake3 = { workspace = true }
data-encoding = { workspace = true }
if-addrs = { workspace = true }

# async runtime
tokio = { workspace = true, features = ["full"] }
wtransport = { workspace = true, features = ["dangerous-configuration"]}