[package]
name = "lerp-relay"
version = "0.1.0"
edition = "2024"

[dependencies]
# protocol
lerp-proto = { workspace = true }

# tracing / logging / error handling
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }

# encoding
data-encoding = { workspace = true }
rmp = {workspace = true}
blake3 = {workspace = true}
rmp-serde = {workspace = true}
serde_bytes = {workspace = true}
serde = { workspace = true, features = ["derive"] }

# dotenv
dotenvy = { workspace = true }
dashmap = { workspace = true }

# async runtime
tokio = { workspace = true, features = ["full"] }
wtransport = { workspace = true }